fix overflow and add link to projects and responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;800&display=swap');
-html {
+
+html,
+body {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
